--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-flask==2.3.1
-flask_sqlalchemy==3.0.3
+Flask==2.3.1
+Flask-SQLAlchemy==3.0.3
 psycopg2==2.9.6
 Flask-Migrate==4.0.4
-flask_cors==3.0.10
+Flask-Cors==3.0.10
 python-dateutil
 babel
 python-jose
 PyJWT==2.6.0
 jose==1.0.0
-gunicorn==20.1.0
+gunicorn
